# hello-agent

./: .env.example  .gitignore  README.md  agent.py  config.yaml  langgraph.json  main.py  mcp_loader.py  memory.py  memory_enhanced.py  pyproject.toml
app/: __init__.py  main.py
config/: __init__.py  container.py  mcp.json  settings.py  skills.py  tortoise_conf.py
constraints/: AGENTS.md
core/: __init__.py  agent.py  agent_graph.py  agent_v5.py  extraction_tools.py  mq_consumer.py  reducer.py  schemas.py  task.py
core/team/: team.py  teammate_graph.py
dao/: user_info.py
docs/: 配置文件管理指南.md
llm/: __init__.py  kimi_chat_model.py
memory/: __init__.py  document_manager.py  enhanced_memory.py  summarizer.py  summarizers.py  tiered_memory.py  tiered_memory_middleware.py
tools/: __init__.py  base.py  file_edit_tools.py  file_search_tools.py  python_executor.py  shell_tools.py  skills_tool.py  task_tools.py  team_tools.py  todo_tool.py  web_browsing.py  web_tools.py
tools/mcp/: __init__.py  loader.py
utils/: rocketmq_util.py
