[tool.poetry]
name = "hello-agent"
version = "0.1.0"
description = "一个基于 LangChain 和 Kimi k2.5 的简单 AI Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.1.16"
langchain-openai = "^0.1.1"
langchain-community = "^0.0.34"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "agent:main"
