[tool.poetry]
name = "hello-agent"
version = "0.1.0"
description = "一个基于 LangChain 和 Kimi k2.5 的简单 AI Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
# package-mode = false  # 注释掉，启用包模式
packages = [
    {include = "app"},
    {include = "core"},
    {include = "config"},
    {include = "memory"},
    {include = "tools"},
    {include = "llm"},
    {include = "utils"},
    {include = "data"}
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^1.2.0"
langchain-openai = "^1.1.0"
langchain-mcp-adapters = "^0.2.1"
python-dotenv = "^1.0.1"
langchain-classic = "^1.0.2"
langchain-community = "^0.4.1"
langchain-ollama = "^1.0.1"
langchain-chroma = "^1.1.0"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "app.main:main"
