[tool.poetry]
name = "hello-agent"
version = "0.1.0"
description = "一个基于 LangChain 和 Kimi k2.5 的简单 AI Agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
# package-mode = false  # 注释掉，启用包模式
packages = [
    {include = "core"},
    {include = "config"},
    {include = "memory"},
    {include = "tools"},
    {include = "llm"},
    {include = "utils"},
    {include = "data"},
    {include = "dao"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
langchain = "^1.2.0"
langchain-openai = "^1.1.0"
langchain-mcp-adapters = "^0.2.1"
python-dotenv = "^1.0.1"
langchain-classic = "^1.0.2"
langchain-community = "^0.4.1"
langchain-ollama = "^1.0.1"
langchain-chroma = "^1.1.0"
tiktoken = "^0.7.0"
jieba = "^0.42.1"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
trafilatura = "^2.0.0"
ddgs = "^9.11.3"
langgraph = "^1.1.0"
langgraph-checkpoint-sqlite = "^3.0.0"
langgraph-checkpoint-redis = "^0.4.0"
tortoise-orm = "^1.1.7"
aiomysql = "^0.3.2"
rocketmq-python-client = "~5.0.6"
dependency-injector = {extras = ["pydantic2"], version = "^4.49.0"}
redis = {extras = ["hiredis"], version = "^5.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
langsmith = "^0.7.16"
langgraph-cli = {extras = ["inmem"], version = "^0.4.16"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "app.main:main"
